--- a/main_app/templates/main_app/contact.html
+++ b/main_app/templates/main_app/contact.html
@@ -1,5 +1,5 @@
 
-{% extends 'base.html' %}
+{% extends 'main_app/base.html' %}
   
   {% load static %}
 
@@ -17,7 +17,7 @@
                 </div><!-- End .container -->
             </nav><!-- End .breadcrumb-nav -->
             <div class="container">
-	        	<div class="page-header page-header-big text-center" style="background-image: url('assets/images/contact-header-bg.jpg')">
+	        	<div class="page-header page-header-big text-center" style="background-image: url({% static 'assets/images/contact-header-bg.jpg' %})">
         			<h1 class="page-title text-white">Contact us<span class="text-white">keep in touch with us</span></h1>
 	        	</div><!-- End .page-header -->
             </div><!-- End .container -->
@@ -72,38 +72,42 @@
                 			<h2 class="title mb-1">Got Any Questions?</h2><!-- End .title mb-2 -->
                 			<p class="mb-2">Use the form below to get in touch with the sales team</p>
 
-                			<form action="#" class="contact-form mb-3">
+                			<form method="POST" class="contact-form mb-3">
+
+							{% csrf_token %}
+							
+
                 				<div class="row">
                 					<div class="col-sm-6">
                                         <label for="cname" class="sr-only">Name</label>
-                						<input type="text" class="form-control" id="cname" placeholder="Name *" required>
+                						<input type="text" name="name" class="form-control" id="cname" placeholder="Name *" required>
                 					</div><!-- End .col-sm-6 -->
 
                 					<div class="col-sm-6">
                                         <label for="cemail" class="sr-only">Email</label>
-                						<input type="email" class="form-control" id="cemail" placeholder="Email *" required>
+                						<input type="email" name="email" class="form-control" id="cemail" placeholder="Email *" required>
                 					</div><!-- End .col-sm-6 -->
                 				</div><!-- End .row -->
 
                 				<div class="row">
                 					<div class="col-sm-6">
                                         <label for="cphone" class="sr-only">Phone</label>
-                						<input type="tel" class="form-control" id="cphone" placeholder="Phone">
+                						<input type="tel" name="phone_number" class="form-control" id="cphone" placeholder="Phone">
                 					</div><!-- End .col-sm-6 -->
 
                 					<div class="col-sm-6">
                                         <label for="csubject" class="sr-only">Subject</label>
-                						<input type="text" class="form-control" id="csubject" placeholder="Subject">
+                						<input type="text" name="subject" class="form-control" id="csubject" placeholder="Subject">
                 					</div><!-- End .col-sm-6 -->
                 				</div><!-- End .row -->
 
                                 <label for="cmessage" class="sr-only">Message</label>
-                				<textarea class="form-control" cols="30" rows="4" id="cmessage" required placeholder="Message *"></textarea>
+                				<textarea class="form-control" name="message" cols="30" rows="4" id="cmessage" required placeholder="Message *"></textarea>
 
-                				<button type="submit" class="btn btn-outline-primary-2 btn-minwidth-sm">
-                					<span>SUBMIT</span>
-            						<i class="icon-long-arrow-right"></i>
-                				</button>
+
+								<button type="submit">Submit</button>
+								
+
                 			</form><!-- End .contact-form -->
                 		</div><!-- End .col-lg-6 -->
                 	</div><!-- End .row -->
@@ -119,7 +123,7 @@
 	                				<div class="row">
 	                					<div class="col-sm-5 col-xl-6">
 	                						<figure class="store-media mb-2 mb-lg-0">
-	                							<img src="assets/images/stores/img-1.jpg" alt="image">
+	                							<img src="{% static 'assets/images/stores/img-1.jpg' %}" alt="image">
 	                						</figure><!-- End .store-media -->
 	                					</div><!-- End .col-xl-6 -->
 	                					<div class="col-sm-7 col-xl-6">
@@ -144,7 +148,7 @@
 	                				<div class="row">
 	                					<div class="col-sm-5 col-xl-6">
 	                						<figure class="store-media mb-2 mb-lg-0">
-	                							<img src="assets/images/stores/img-2.jpg" alt="image">
+	                							<img src="{% static 'assets/images/stores/img-2.jpg' %}" alt="image">
 	                						</figure><!-- End .store-media -->
 	                					</div><!-- End .col-xl-6 -->
 
