--- a/main_app/templates/main_app/index.html
+++ b/main_app/templates/main_app/index.html
@@ -51,7 +51,7 @@
             <span class="slider-loader"></span><!-- End .slider-loader -->
         </div><!-- End .intro-slider-container -->
 
-
+            
         <div class="container">
             <h2 class="title text-center mb-4">Explore Popular Categories</h2><!-- End .title text-center -->
 
@@ -136,7 +136,7 @@
                     </div><!-- End .col-sm-4 col-lg-2 -->
                 </div><!-- End .row -->
             </div><!-- End .cat-blocks-container -->
-        </div><!-- End .container -->
+        </div><!-- End .container --> 
 
         <div class="mb-4"></div><!-- End .mb-4 -->
 
@@ -254,11 +254,14 @@
                                     }
                                 }
                             }'>
-                        <div class="product product-2">
+                            
+                            {% for Products in product %}
+
+                            <div class="product product-2">
                             <figure class="product-media">
                                 <span class="product-label label-circle label-top">Top</span>
-                                <a href="product.html">
-                                    <img src="{% static 'assets/images/demos/demo-4/products/product-1.jpg' %}"
+                                <a href="{% url 'product_detail' Products.pk %}" target="_blank">
+                                    <img src="{{Products.image.url}}"
                                         alt="Product image" class="product-image">
                                 </a>
 
@@ -276,13 +279,20 @@
 
                             <div class="product-body">
                                 <div class="product-cat">
-                                    <a href="#">Laptops</a>
+                                    <a href="#">{{Products.category}}</a>
                                 </div><!-- End .product-cat -->
-                                <h3 class="product-title"><a href="product.html">MacBook Pro 13" Display, i5</a></h3>
+                                <h3 class="product-title"><a href="product.html">{{Products.name}}</a></h3>
                                 <!-- End .product-title -->
                                 <div class="product-price">
-                                    $1,199.99
-                                </div><!-- End .product-price -->
+                                    <del>TK{{Products.regular_price}}</del>
+                                </div>
+
+                                <div class="product-price">
+                                    TK{{Products.discount_price}}
+                                </div>
+                                
+                                
+                                <!-- End .product-price -->
                                 <div class="ratings-container">
                                     <div class="ratings">
                                         <div class="ratings-val" style="width: 100%;"></div><!-- End .ratings-val -->
@@ -290,212 +300,10 @@
                                     <span class="ratings-text">( 4 Reviews )</span>
                                 </div><!-- End .rating-container -->
                             </div><!-- End .product-body -->
-                        </div><!-- End .product -->
+                            </div><!-- End .product -->
 
-                        <div class="product product-2">
-                            <figure class="product-media">
-                                <a href="product.html">
-                                    <img src="{% static 'assets/images/demos/demo-4/products/product-2.jpg' %}"
-                                        alt="Product image" class="product-image">
-                                </a>
-
-                                <div class="product-action-vertical">
-                                    <a href="#" class="btn-product-icon btn-wishlist" title="Add to wishlist"></a>
-                                </div><!-- End .product-action -->
-
-                                <div class="product-action">
-                                    <a href="#" class="btn-product btn-cart" title="Add to cart"><span>add to
-                                            cart</span></a>
-                                    <a href="popup/quickView.html" class="btn-product btn-quickview"
-                                        title="Quick view"><span>quick view</span></a>
-                                </div><!-- End .product-action -->
-                            </figure><!-- End .product-media -->
-
-                            <div class="product-body">
-                                <div class="product-cat">
-                                    <a href="#">Audio</a>
-                                </div><!-- End .product-cat -->
-                                <h3 class="product-title"><a href="product.html">Bose - SoundLink Bluetooth Speaker</a>
-                                </h3><!-- End .product-title -->
-                                <div class="product-price">
-                                    $79.99
-                                </div><!-- End .product-price -->
-                                <div class="ratings-container">
-                                    <div class="ratings">
-                                        <div class="ratings-val" style="width: 60%;"></div><!-- End .ratings-val -->
-                                    </div><!-- End .ratings -->
-                                    <span class="ratings-text">( 6 Reviews )</span>
-                                </div><!-- End .rating-container -->
-                            </div><!-- End .product-body -->
-                        </div><!-- End .product -->
-
-                        <div class="product product-2">
-                            <figure class="product-media">
-                                <span class="product-label label-circle label-new">New</span>
-                                <a href="product.html">
-                                    <img src="{% static 'assets/images/demos/demo-4/products/product-3.jpg' %}"
-                                        alt="Product image" class="product-image">
-                                </a>
-
-                                <div class="product-action-vertical">
-                                    <a href="#" class="btn-product-icon btn-wishlist" title="Add to wishlist"></a>
-                                </div><!-- End .product-action -->
-
-                                <div class="product-action">
-                                    <a href="#" class="btn-product btn-cart" title="Add to cart"><span>add to
-                                            cart</span></a>
-                                    <a href="popup/quickView.html" class="btn-product btn-quickview"
-                                        title="Quick view"><span>quick view</span></a>
-                                </div><!-- End .product-action -->
-                            </figure><!-- End .product-media -->
-
-                            <div class="product-body">
-                                <div class="product-cat">
-                                    <a href="#">Tablets</a>
-                                </div><!-- End .product-cat -->
-                                <h3 class="product-title"><a href="product.html">Apple - 11 Inch iPad Pro with Wi-Fi
-                                        256GB </a></h3><!-- End .product-title -->
-                                <div class="product-price">
-                                    $899.99
-                                </div><!-- End .product-price -->
-                                <div class="ratings-container">
-                                    <div class="ratings">
-                                        <div class="ratings-val" style="width: 80%;"></div><!-- End .ratings-val -->
-                                    </div><!-- End .ratings -->
-                                    <span class="ratings-text">( 4 Reviews )</span>
-                                </div><!-- End .rating-container -->
-
-                                <div class="product-nav product-nav-dots">
-                                    <a href="#" style="background: #edd2c8;"><span class="sr-only">Color name</span></a>
-                                    <a href="#" style="background: #eaeaec;"><span class="sr-only">Color name</span></a>
-                                    <a href="#" class="active" style="background: #333333;"><span class="sr-only">Color
-                                            name</span></a>
-                                </div><!-- End .product-nav -->
-                            </div><!-- End .product-body -->
-                        </div><!-- End .product -->
-
-                        <div class="product product-2">
-                            <figure class="product-media">
-                                <span class="product-label label-circle label-top">Top</span>
-                                <span class="product-label label-circle label-sale">Sale</span>
-                                <a href="product.html">
-                                    <img src="{% static 'assets/images/demos/demo-4/products/product-4.jpg' %}"
-                                        alt="Product image" class="product-image">
-                                </a>
-
-                                <div class="product-action-vertical">
-                                    <a href="#" class="btn-product-icon btn-wishlist" title="Add to wishlist"></a>
-                                </div><!-- End .product-action -->
-
-                                <div class="product-action">
-                                    <a href="#" class="btn-product btn-cart" title="Add to cart"><span>add to
-                                            cart</span></a>
-                                    <a href="popup/quickView.html" class="btn-product btn-quickview"
-                                        title="Quick view"><span>quick view</span></a>
-                                </div><!-- End .product-action -->
-                            </figure><!-- End .product-media -->
-
-                            <div class="product-body">
-                                <div class="product-cat">
-                                    <a href="#">Cell Phone</a>
-                                </div><!-- End .product-cat -->
-                                <h3 class="product-title"><a href="product.html">Google - Pixel 3 XL 128GB</a></h3>
-                                <!-- End .product-title -->
-                                <div class="product-price">
-                                    <span class="new-price">$35.41</span>
-                                    <span class="old-price">Was $41.67</span>
-                                </div><!-- End .product-price -->
-                                <div class="ratings-container">
-                                    <div class="ratings">
-                                        <div class="ratings-val" style="width: 100%;"></div><!-- End .ratings-val -->
-                                    </div><!-- End .ratings -->
-                                    <span class="ratings-text">( 10 Reviews )</span>
-                                </div><!-- End .rating-container -->
-
-                                <div class="product-nav product-nav-dots">
-                                    <a href="#" class="active" style="background: #edd2c8;"><span class="sr-only">Color
-                                            name</span></a>
-                                    <a href="#" style="background: #eaeaec;"><span class="sr-only">Color name</span></a>
-                                    <a href="#" style="background: #333333;"><span class="sr-only">Color name</span></a>
-                                </div><!-- End .product-nav -->
-                            </div><!-- End .product-body -->
-                        </div><!-- End .product -->
-
-                        <div class="product product-2">
-                            <figure class="product-media">
-                                <span class="product-label label-circle label-top">Top</span>
-                                <a href="product.html">
-                                    <img src="{% static 'assets/images/demos/demo-4/products/product-5.jpg' %}"
-                                        alt="Product image" class="product-image">
-                                </a>
-
-                                <div class="product-action-vertical">
-                                    <a href="#" class="btn-product-icon btn-wishlist" title="Add to wishlist"></a>
-                                </div><!-- End .product-action -->
-
-                                <div class="product-action">
-                                    <a href="#" class="btn-product btn-cart" title="Add to cart"><span>add to
-                                            cart</span></a>
-                                    <a href="popup/quickView.html" class="btn-product btn-quickview"
-                                        title="Quick view"><span>quick view</span></a>
-                                </div><!-- End .product-action -->
-                            </figure><!-- End .product-media -->
-
-                            <div class="product-body">
-                                <div class="product-cat">
-                                    <a href="#">TV & Home Theater</a>
-                                </div><!-- End .product-cat -->
-                                <h3 class="product-title"><a href="product.html">Samsung - 55" Class LED 2160p Smart</a>
-                                </h3><!-- End .product-title -->
-                                <div class="product-price">
-                                    $899.99
-                                </div><!-- End .product-price -->
-                                <div class="ratings-container">
-                                    <div class="ratings">
-                                        <div class="ratings-val" style="width: 60%;"></div><!-- End .ratings-val -->
-                                    </div><!-- End .ratings -->
-                                    <span class="ratings-text">( 5 Reviews )</span>
-                                </div><!-- End .rating-container -->
-                            </div><!-- End .product-body -->
-                        </div><!-- End .product -->
-
-                        <div class="product product-2">
-                            <figure class="product-media">
-                                <span class="product-label label-circle label-top">Top</span>
-                                <a href="product.html">
-                                    <img src="{% static 'assets/images/demos/demo-4/products/product-1.jpg' %}"
-                                        alt="Product image" class="product-image">
-                                </a>
-
-                                <div class="product-action-vertical">
-                                    <a href="#" class="btn-product-icon btn-wishlist" title="Add to wishlist"></a>
-                                </div><!-- End .product-action -->
-
-                                <div class="product-action">
-                                    <a href="#" class="btn-product btn-cart" title="Add to cart"><span>add to
-                                            cart</span></a>
-                                    <a href="popup/quickView.html" class="btn-product btn-quickview"
-                                        title="Quick view"><span>quick view</span></a>
-                                </div><!-- End .product-action -->
-                            </figure><!-- End .product-media -->
-
-                            <div class="product-body">
-                                <div class="product-cat">
-                                    <a href="#">Laptops</a>
-                                </div><!-- End .product-cat -->
-                                <h3 class="product-title"><a href="product.html">MacBook Pro 13" Display, i5</a></h3>
-                                <!-- End .product-title -->
-                                <div class="product-price">
-                                    $1,199.99
-                                </div><!-- End .product-price -->
-                                <div class="ratings-container">
-                                    <div class="ratings">
-                                        <div class="ratings-val" style="width: 100%;"></div><!-- End .ratings-val -->
-                                    </div><!-- End .ratings -->
-                                    <span class="ratings-text">( 4 Reviews )</span>
-                                </div><!-- End .rating-container -->
-                            </div><!-- End .product-body -->
-                        </div><!-- End .product -->
+                            {% endfor %}
+                        
                     </div><!-- End .owl-carousel -->
                 </div><!-- .End .tab-pane -->
                 <div class="tab-pane p-0 fade" id="new-tv-tab" role="tabpanel" aria-labelledby="new-tv-link">
