Navbar Create,Related Products show and search engine create

--- a/user_app/templates/user_app/registerform.html
+++ b/user_app/templates/user_app/registerform.html
@@ -21,58 +21,57 @@
 
                     <!-- First Name input -->
                     <div data-mdb-input-init class="form-outline mb-4">
-                        <input type="text" id="form2Example1" class="form-control" />
-                        <label class="form-label" name="firstname" for="form2Example1">First Name</label>
+                        <input type="text" id="id_first_name" class="form-control" />
+                        <label class="form-label" name="first_name" for="id_first_name">First Name</label>
                     </div>
 
                     <!-- Last Name input -->
                     <div data-mdb-input-init class="form-outline mb-4">
-                        <input type="text" id="form2Example1" class="form-control" />
-                        <label class="form-label" name="lastname" for="form2Example1">Last Name</label>
+                        <input type="text" id="id_last_name" class="form-control" />
+                        <label class="form-label" name="last_name" for="id_last_name">Last Name</label>
                     </div>
 
                     <!-- User Name input -->
                     <div data-mdb-input-init class="form-outline mb-4">
-                        <input type="text" id="form2Example1" class="form-control" />
-                        <label class="form-label" name="username" for="form2Example1">User Name</label>
+                        <input type="text" id="id_username" class="form-control" />
+                        <label class="form-label" name="username" for="id_username">User Name</label>
                         <p>Required. 150 characters or fewer. Letters, digites and @/./+/-/_only</p>
                     </div>
 
                     <!-- Email Address input -->
                     <div data-mdb-input-init class="form-outline mb-4">
-                        <input type="email" id="form2Example1" class="form-control" />
-                        <label class="form-label" name="emailaddress" for="form2Example1">Email Address</label>
+                        <input type="email" id="id_email" class="form-control" />
+                        <label class="form-label" name="email" for="id_email">Email Address</label>
                     </div>
 
                     <!-- Password input -->
                     <div data-mdb-input-init class="form-outline mb-4">
-                        <input type="password" id="form2Example2" class="form-control" />
-                        <label class="form-label" name="password" for="form2Example2">Password</label>
+                        <input type="password" id="id_password1" class="form-control" />
+                        <label class="form-label" name="password1" for="id_password1">Password</label>
                         <ul>
                             <li>
-                                Your Password can't be too similar to your other personal information.
+                                Your password can't be too similer to your other personal information.
                             </li>
                             <li>
-                                Your Password must contain at lest 8 characters.
+                                Youe password must contain at last 8 cgaracters.
                             </li>
                             <li>
-                                Your Password can't be a commonly used password.
+                                Your password can't be a commonly used password.
                             </li>
                             <li>
-                                Your Password can't be entirely numeric.
+                                Your password can't be entirely numeric.
                             </li>
                         </ul>
                     </div>
 
                     <!-- Password Conformation input -->
                     <div data-mdb-input-init class="form-outline mb-4">
-                        <input type="password" id="form2Example2" class="form-control" />
-                        <label class="form-label" name="passwordconformation" for="form2Example2">Password Conformation</label>
+                        <input type="password" id="id_password2" class="form-control" />
+                        <label class="form-label" name="password2" for="id_password2">Password Conformation</label>
                     </div>
 
                     <!-- Submit button -->
-                    <button type="submit" data-mdb-button-init data-mdb-ripple-init
-                        class="btn btn-primary btn-block mb-4">Submit</button>
+                    <button type="submit" class="btn btn-primary btn-block" >Submit</button>
                 </form>
 
             </div>
