--- a/user_app/templates/user_app/password_change.html
+++ b/user_app/templates/user_app/password_change.html
@@ -3,7 +3,7 @@
 
 
 {% block content %}
-
+<h3>Change Password</h3>
 <div class="conteiner">
     <div class="col-11 col-md-5 mx-auto mt-5">
         <div class="card shadow p-3">
