--- a/main_app/templates/main_app/index.html
+++ b/main_app/templates/main_app/index.html
@@ -260,10 +260,8 @@
                             </div><!-- End .product-action -->
 
                             <div class="product-action">
-                                <a href="#" class="btn-product btn-cart" title="Add to cart"><span>add to
-                                        cart</span></a>
-                                <a href="popup/quickView.html" class="btn-product btn-quickview"
-                                    title="Quick view"><span>quick view</span></a>
+                                <a href="{% url 'add_to_cart' Products.pk %}" class="btn-product btn-cart" title="Add to cart"><span>add to cart</span></a>
+                                <a href="popup/quickView.html" class="btn-product btn-quickview" title="Quick view"><span>quick view</span></a>
                             </div><!-- End .product-action -->
                         </figure><!-- End .product-media -->
 
@@ -334,8 +332,7 @@
                             </div><!-- End .product-action -->
 
                             <div class="product-action">
-                                <a href="#" class="btn-product btn-cart" title="Add to cart"><span>add to
-                                        cart</span></a>
+                                <a href="#" class="btn-product btn-cart" title="Add to cart"><span>add to cart</span></a>
                                 <a href="popup/quickView.html" class="btn-product btn-quickview"
                                     title="Quick view"><span>quick view</span></a>
                             </div><!-- End .product-action -->
