--- a/main_app/templates/main_app/index.html
+++ b/main_app/templates/main_app/index.html
@@ -256,7 +256,7 @@
                             </a>
 
                             <div class="product-action-vertical">
-                                <a href="#" class="btn-product-icon btn-wishlist" title="Add to wishlist"></a>
+                                <a href="{% url 'add_to_wishlist' Products.pk %}" class="btn-product-icon btn-wishlist" title="Add to wishlist"></a>
                             </div><!-- End .product-action -->
 
                             <div class="product-action">
