Cart and Wishlist page create and Checkout

--- a/main_app/templates/main_app/base.html
+++ b/main_app/templates/main_app/base.html
@@ -155,26 +155,27 @@
                     </div><!-- End .compare-dropdown -->
 
                     <div class="wishlist">
-                        <a href="wishlist.html" title="Wishlist">
+                        <a href="{% url 'wishlist' %}" title="Wishlist">
                             <div class="icon">
                                 <i class="icon-heart-o"></i>
-                                <span class="wishlist-count badge">3</span>
+                                <span class="wishlist-count badge">{{wishlist}}</span>
                             </div>
                             <p>Wishlist</p>
                         </a>
                     </div><!-- End .compare-dropdown -->
 
                     <div class="dropdown cart-dropdown">
-                        <a href="#" class="dropdown-toggle" role="button" data-toggle="dropdown" aria-haspopup="true"
+                        <a href="{% url 'cart' %}" class="dropdown-toggle" 
                             aria-expanded="false" data-display="static">
                             <div class="icon">
                                 <i class="icon-shopping-cart"></i>
-                                <span class="cart-count">2</span>
+                                <span class="cart-count">{{cart}}</span>
                             </div>
                             <p>Cart</p>
                         </a>
 
-                        <div class="dropdown-menu dropdown-menu-right">
+
+                        {% comment %} <div class="dropdown-menu dropdown-menu-right">
                             <div class="dropdown-cart-products">
                                 <div class="product">
                                     <div class="product-cart-details">
@@ -230,7 +231,9 @@
                                 <a href="checkout.html" class="btn btn-outline-primary-2"><span>Checkout</span><i
                                         class="icon-long-arrow-right"></i></a>
                             </div><!-- End .dropdown-cart-total -->
-                        </div><!-- End .dropdown-menu -->
+                        </div><!-- End .dropdown-menu --> {% endcomment %}
+
+
                     </div><!-- End .cart-dropdown -->
                 </div><!-- End .header-right -->
 
