--- a/main_app/templates/main_app/base.html
+++ b/main_app/templates/main_app/base.html
@@ -86,7 +86,7 @@
                     </button>
 
                     <a href="/" class="logo">
-                        <img src="{% static 'assets/images/demos/demo-4/logo.png' %}" alt="Molla Logo" width="105"
+                        <img src="{% static 'assets/images/al madina furniture logo.png' %}" alt="Al Madina Furniture Logo" width="105"
                             height="25">
                     </a>
                 </div><!-- End .header-left -->
@@ -319,7 +319,7 @@
                 <div class="row">
                     <div class="col-sm-6 col-lg-3">
                         <div class="widget widget-about">
-                            <img src="{% static 'assets/images/demos/demo-4/logo-footer.png' %}" class="footer-logo"
+                            <img src="{% static 'assets/images/al madina furniture logo.png' %}" class="footer-logo"
                                 alt="Footer Logo" width="105" height="25">
                             <p>Praesent dapibus, neque id cursus ucibus, tortor neque egestas augue, eu vulputate magna
                                 eros eu erat. </p>
@@ -327,7 +327,7 @@
                             <div class="widget-call">
                                 <i class="icon-phone"></i>
                                 Got Question? Call us 24/7
-                                <a href="tel:#">+0123 456 789</a>
+                                <a href="tel:#">+880 1725113364</a>
                             </div><!-- End .widget-call -->
                         </div><!-- End .widget about-widget -->
                     </div><!-- End .col-sm-6 col-lg-3 -->
